plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.5'
}

group = 'cn.zenghome'
version = '0.0.1-SNAPSHOT'
description = 'aipi-v1-bw20-api'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    runtimeOnly 'org.postgresql:r2dbc-postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

graalvmNative {
    binaries {
        main {
            imageName = 'bootstrap'
        }
    }
}

tasks.named('bootBuildImage') {
    environment = [
            "BP_NATIVE_IMAGE": "true",
            "BP_JVM_VERSION": "25",
            "SERVER_PORT": "9000",
            "BP_NATIVE_IMAGE_BUILD_ARGUMENTS": """
                -H:+UnlockExperimentalVMOptions
                --enable-native-access=ALL-UNNAMED
                -H:MaxRuntimeCompileMethods=500
            """,
            "BPL_JAVA_INSTALL_OPTIONS": """
                -Xmx64m
                -Xms64m
                -XX:MaxDirectMemorySize=32m
            """,
    ]
}
